Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55650

QML QtWebEngine system combobox drop-down placed at wrong coordinates

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6
    • 5.6, 5.7.0, 5.8
    • WebEngine
    • None
    • Linux, X11, Binary NVidia drivers
    • afd529cfcb3b42a6afcd5fdf4a01e9c9861884f0

    Description

      I create a WebEngineView at (0,0) and then later move the X coordinate to make room for a vertical toolbar on the left (user can turn on/off). The WebEngineView moves to the right fine, but when a drop down button on a combobox is selected, the drop down is placed at the wrong X position. It appears to not be using the new X coordinate, but instead is calculating its position based on the original X coordinate (when the WebEngineView is created).

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-55650
          # Subject Branch Project Status CR V

          Activity

            People

              pvarga Peter Varga
              danw Dan W
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes