Propagate the view's screen coordinates on global position change in Quick

Based on widget solution: 1e83a2d1b61b13323163dfe8cac64dad397cb202

Task-number: QTBUG-55650
Change-Id: I6df45e7e018fa201c50fe81e8679c36f97ddeb1e
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>